<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:text="@string/creators"
        android:id="@+id/textViewCreators"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:text="@string/year"
        android:id="@+id/textViewYear"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textViewCreators"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:textColor="#FFFF00"
        android:text="@string/start_button"
        android:id="@+id/button"
        android:layout_marginTop="13dp"
        android:onClick="startWheel"
        android:layout_below="@+id/textViewYear"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
